[package]
edition = "2021"
name = "spx_rust_backend"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4","async"] }
napi-derive = "2.12.2"
futures = "0.3.28"
linreg = "0.2.0"
postgres = "0.19.5"
websocket = "0.26.5"
serde = "1.0.164"
serde_json = "1.0.97"
tokio = { version = "1.28.2", features = ["full"] }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
